[gd_scene load_steps=3 format=2]

[ext_resource path="res://instructions/UpgradeInstruction.gd" type="Script" id=1]
[ext_resource path="res://instructions/InstructionButton.tscn" type="PackedScene" id=2]

[node name="UpgradeInstruction" type="Area2D"]
script = ExtResource( 1 )
color = Color( 0.211765, 0.211765, 0.439216, 1 )

[node name="ChangeVisibility" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 30, 0 )
color = Color( 0.960784, 0.870588, 0.462745, 1 )

[node name="ChangeCapacity" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 60, 0 )
color = Color( 0.443137, 0.85098, 0.670588, 1 )

[node name="ChangeProduction" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 45, -15 )
color = Color( 0.54902, 0.270588, 0.513726, 1 )

[node name="ChangeEfficiency" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 45, 15 )
color = Color( 0.364706, 0.756863, 0.796078, 1 )
